# rstsr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  cblas  changelog  readme.md  release-plz.toml
crates-device/rstsr-mkl/: CHANGELOG.md  Cargo.toml  readme.md
crates-device/rstsr-mkl/src/: lib.rs  threading.rs
crates-device/rstsr-mkl/tests/: mod.rs  test_utils  tests_core_row.rs  tests_linalg_func.rs
crates-plugin/rstsr-tblis/: Cargo.toml
crates-plugin/rstsr-tblis/src/: einsum_impl.rs  lib.rs  prelude.rs  tensordot_impl.rs
rstsr/: Cargo.toml  notes_to_api_doc.md
rstsr-aocl/: Cargo.toml  readme.md
rstsr-aocl/src/: creation.rs  lib.rs  threading.rs
rstsr-aocl/src/driver_impl/: mod.rs
rstsr-aocl/src/linalg_auto_impl/: inv.rs  slogdet.rs
rstsr-aocl/src/rayon_auto_impl/: op_ternary_common.rs  op_tri.rs
rstsr-aocl/tests/test_driver_impl/: lapack_svd_f64.rs
rstsr-aocl/tests/test_linalg_func/: func_f64.rs  func_validation_f64.py
rstsr-blas-traits/: CHANGELOG.md  Cargo.toml
rstsr-blas-traits/driver_impl/cblas/: mod.rs
rstsr-blas-traits/driver_impl/lapack/: mod.rs
rstsr-blas-traits/driver_impl/lapacke/: mod.rs
rstsr-blas-traits/src/: blas_scalar.rs  cblas_flags.rs  eigen_range.rs  lib.rs  prelude.rs  prelude_dev.rs  threading.rs  trait_def.rs
rstsr-blas-traits/src/blas3/: gemm.rs  mod.rs  syhemm.rs  trsm.rs
rstsr-blas-traits/src/lapack_eig/: geev.rs  ggev.rs  mod.rs
rstsr-blas-traits/src/lapack_eigh/: mod.rs  syev.rs  syevd.rs  syevr.rs  sygv.rs  sygvd.rs  sygvx.rs
rstsr-blas-traits/src/lapack_qr/: geqp3.rs  geqrf.rs  mod.rs  orgqr.rs  ormqr.rs
rstsr-blas-traits/src/lapack_solve/: gesv.rs  getrf.rs  getri.rs  mod.rs  potrf.rs  sysv.rs
rstsr-blas-traits/src/lapack_svd/: gesdd.rs  gesvd.rs  mod.rs
rstsr-blas-traits/src/util/: mod.rs  util_layout.rs  util_tensor.rs
rstsr-blis/: Cargo.toml  readme.md
rstsr-blis/src/: lib.rs  threading.rs
rstsr-blis/src/driver_impl/: lapack
rstsr-blis/src/linalg_auto_impl/: cholesky.rs  det.rs
rstsr-blis/src/rayon_auto_impl/: adv_indexing.rs  assignment.rs
rstsr-blis/tests/test_driver_impl/: lapack_eigh_f64.rs
rstsr-common/: Cargo.toml  readme.md
rstsr-common/src/: alloc_vec.rs  axes_pair_index.rs  axis_index.rs  error.rs  flags.rs  format_layout.rs  lib.rs  pack_array.rs  par_iter.rs  prelude.rs  prelude_dev.rs  tensordot_to_einsum.rs  util.rs
rstsr-common/src/layout/: broadcast.rs  dim.rs  indexer.rs  iterator.rs  layoutbase.rs  matmul.rs  mod.rs  rearrangement.rs  reshape.rs  shape.rs  slice.rs
rstsr-core/: CHANGELOG.md  Cargo.toml  readme.md
rstsr-core/benches/: faer_gemm.rs  main.rs  tensor_add.rs  tensor_sum.rs
rstsr-core/benches/faer_gemm/: main.rs
rstsr-core/src/: error.rs  flags.rs  lib.rs  prelude.rs  prelude_dev.rs  tensorbase.rs  util.rs
rstsr-core/src/dev_utilities/: mod.rs
rstsr-core/src/device_cpu_serial/: adv_indexing.rs  assignment.rs  conversion.rs  creation.rs  device.rs  matmul.rs  mod.rs  reduction.rs
rstsr-core/src/device_faer/: conversion.rs  creation.rs  device.rs  macro_impl.rs  matmul.rs  matmul_impl.rs  mod.rs  reduction.rs
rstsr-core/src/docs/: api_specification.md  array_api_standard.md  lib.md
rstsr-core/src/feature_rayon/: assignment.rs  device.rs  layout_par_iter.rs  matmul_naive.rs  mod.rs  op_with_func.rs  par_iter.rs  reduction.rs
rstsr-core/src/format/: format_tensor.rs  mod.rs
rstsr-core/src/layout/: broadcast.rs  dim.rs  indexer.rs  iterator.rs  iterator_col_major.rs  iterator_row_major.rs  layoutbase.rs  matmul.rs  mod.rs  rearrangement.rs  reflection.rs  reshape.rs  shape.rs  slice.rs
rstsr-core/src/operators/: adv_indexing.rs  combined_trait.rs  linalg.rs  matmul.rs  mod.rs
rstsr-core/src/storage/: adv_indexing.rs  assignment.rs  combined_trait.rs  conversion.rs  creation.rs  data.rs  device.rs  matmul.rs  mod.rs  reduction.rs
rstsr-core/src/tensor/: adv_indexing.rs  asarray.rs  assignment.rs  creation.rs  creation_from_tensor.rs  data.rs  device_conversion.rs  indexing.rs  iterator.rs  iterator_axes.rs  iterator_elem.rs  manuplication.rs  map_elementwise.rs  matmul.rs  mod.rs  ownership_conversion.rs  pack_array.rs  reduction.rs  tensor2_impl.rs  tensor_mutable.rs  tensor_view_list.rs  util.rs
rstsr-core/tests/: tensor_sum.rs  tests_core_row.rs  tests_issues.rs  tests_row.rs
rstsr-core/tests/core_func/: mod.rs
rstsr-core/tests/test_issues/: issue_7.rs  issue_77.rs  mod.rs
rstsr-core/tests/test_utils/: equality.rs
rstsr-core/tests/tests_core/: mod.rs
rstsr-core/tests/tests_utils/: equality.rs  mod.rs
rstsr-dtype-traits/: Cargo.toml  readme.md
rstsr-dtype-traits/src/: abs.rs  ext_float.rs  ext_num.rs  ext_real.rs  floordiv.rs  isclose.rs  lib.rs  minmax.rs  nextafter.rs  promotion.rs  reim.rs  val_write.rs
rstsr-hdf5/: Cargo.toml  readme.md
rstsr-hdf5/src/: asarray.rs  device.rs  lib.rs  prelude_dev.rs  read.rs
rstsr-linalg-traits/: Cargo.toml
rstsr-linalg-traits/src/: lib.rs  prelude.rs  prelude_dev.rs  ref_impl_blas.rs  traits_def.rs
rstsr-linalg-traits/src/blas_impl/: det.rs  pinv.rs  solve_general.rs  svdvals.rs
rstsr-linalg-traits/src/faer_impl/: cholesky.rs  det.rs  eigh.rs  eigvalsh.rs  inv.rs  mod.rs  pinv.rs  solve_general.rs  solve_triangular.rs  svd.rs  svdvals.rs
rstsr-linalg-traits/src/ref_impl_blas/: cholesky.rs  eigh.rs  inv.rs  mod.rs  solve_general.rs  solve_symmetric.rs  solve_triangular.rs
rstsr-linalg-traits/src/traits/: basics.rs  cholesky.rs  eigh.rs  (+5 more)
rstsr-linalg-traits/tests/: mod.rs
rstsr-native-impl/: Cargo.toml  readme.md
rstsr-native-impl/src/: lib.rs  prelude_dev.rs
rstsr-openblas/: CHANGELOG.md  Cargo.toml  build.rs  readme.md
rstsr-openblas-ffi/: Cargo.toml  readme.md
rstsr-openblas-ffi/src/: cblas.rs  lib.rs  threading.rs
rstsr-openblas/src/: conversion.rs  creation.rs  device.rs  lib.rs  macro_impl.rs  matmul.rs  matmul_impl.rs  prelude_dev.rs  threading.rs
rstsr-openblas/tests/: mod.rs  test_argmin.rs  test_workable.rs
rstsr-sci-traits/: Cargo.toml  readme.md
rstsr-sci-traits/src/: lib.rs  prelude.rs  prelude_dev.rs
rstsr/src/: lib.rs  prelude.rs
(+472 files in other folders)
