[workspace]
resolver = "2"
members = [
    "rstsr",
    "rstsr-core",
    "rstsr-common",
    "rstsr-openblas",
    "rstsr-dtype-traits",
    "rstsr-blas-traits",
    "rstsr-linalg-traits",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
description = "An n-Dimension Rust Tensor Toolkit"
repository = "https://github.com/RESTGroup/rstsr"
keywords = ["tensor", "array", "blas", "multidimensional", "scientific"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
rstsr-core = { path = "./rstsr-core", default-features = false, version = "0.2.6" }
# members without core
rstsr-common = { path = "./rstsr-common", default-features = false, version = "0.2.6" }
rstsr-dtype-traits = { path = "./rstsr-dtype-traits", default-features = false, version = "0.2.6" }
# members
rstsr-openblas = { path = "./rstsr-openblas", default-features = false, version = "0.2.6" }
rstsr-blas-traits = { path = "./rstsr-blas-traits", default-features = false, version = "0.2.6" }
rstsr-linalg-traits = { path = "./rstsr-linalg-traits", default-features = false, version = "0.2.6" }
# develop dependencies that should not publish
rstsr-test-manifest = { path = "./rstsr-test-manifest", default-features = false }
# ffi dependencies
rstsr-lapack-ffi = { version = "0.1.0" }
rstsr-openblas-ffi = { version = "0.3.0" }
# basic dependencies
num = { version = "0.4" }
thiserror = { version = "1.0" }
itertools = { version = "0.13" }
half = { version = "2.4", features = ["num-traits"] }
derive_builder = { version = "0.20" }
duplicate = { version = "2.0" }
# optional dependencies
rayon = { version = "1.10" }
faer = { version = "0.19" }
faer-ext = { version = "0.3" }
faer-entity = { version = "0.19" }
# dev dependencies
npyz = { version = "0.8", features = ["complex"] }
anyhow = { version = "1.0" }
rand = { version = "0.8" }
approx = { version = "0.5" }
ndarray = { version = "0.15" }
criterion = { version = "0.5" }
cpu-time = { version = "1.0" }

[profile.coverage]
inherits = "dev"
opt-level = 0
