[workspace]
resolver = "2"
members = [
    "rstsr",
    "rstsr-core",
    "rstsr-common",
    "rstsr-openblas",
    "rstsr-dtype-traits",
    "rstsr-blas-traits",
    "rstsr-linalg-traits",
    "rstsr-native-impl",
    "rstsr-sci-traits",
]

[workspace.package]
version = "0.3.7"
edition = "2021"
description = "An n-Dimension Rust Tensor Toolkit"
repository = "https://github.com/RESTGroup/rstsr"
keywords = ["tensor", "array", "blas", "multidimensional", "scientific"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
rstsr-core = { path = "./rstsr-core", default-features = false, version = "0.3.7" }
# members without core
rstsr-common = { path = "./rstsr-common", default-features = false, version = "0.3.7" }
rstsr-dtype-traits = { path = "./rstsr-dtype-traits", default-features = false, version = "0.3.7" }
rstsr-native-impl = { path = "./rstsr-native-impl", default-features = false, version = "0.3.7" }
# members
rstsr-openblas = { path = "./rstsr-openblas", default-features = false, version = "0.3.7" }
rstsr-blas-traits = { path = "./rstsr-blas-traits", default-features = false, version = "0.3.7" }
rstsr-linalg-traits = { path = "./rstsr-linalg-traits", default-features = false, version = "0.3.7" }
rstsr-sci-traits = { path = "./rstsr-sci-traits", default-features = false, version = "0.3.7" }
# develop dependencies that should not publish
rstsr-test-manifest = { path = "./rstsr-test-manifest", default-features = false }
# ffi dependencies
rstsr-lapack-ffi = { version = "0.2.0" }
rstsr-openblas-ffi = { version = "0.3.1" }
# basic dependencies
num = { version = "0.4" }
itertools = { version = "0.13" }
half = { version = "2.4", features = ["num-traits"] }
derive_builder = { version = "0.20" }
duplicate = { version = "2.0" }
# optional dependencies
rayon = { version = "1.10" }
faer = { version = "0.22", default-features = false, features = ["rayon", "linalg"] }
faer-ext = { version = "0.6" }
# dev dependencies
npyz = { version = "0.8", features = ["complex"] }
anyhow = { version = "1.0" }
rand = { version = "0.8" }
approx = { version = "0.5" }
ndarray = { version = "0.15" }
criterion = { version = "0.5" }
cpu-time = { version = "1.0" }

[profile.coverage]
inherits = "dev"
opt-level = 0

[profile.dev]
opt-level = 0
