[workspace]
resolver = "2"
members = [
    "rstsr",
    "rstsr-core",
    "rstsr-common",
    "rstsr-dtype-traits",
    "rstsr-blas-traits",
    "rstsr-linalg-traits",
    "rstsr-native-impl",
    "rstsr-sci-traits",
    "crates-device/rstsr-openblas",
    "crates-device/rstsr-mkl",
    "crates-device/rstsr-blis",
    "crates-device/rstsr-aocl",
    "crates-device/rstsr-kml",
    "crates-plugin/rstsr-tblis",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
rust-version = "1.82.0"
description = "An n-Dimension Rust Tensor Toolkit"
repository = "https://github.com/RESTGroup/rstsr"
keywords = ["tensor", "array", "blas", "multidimensional", "scientific"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
rstsr = { path = "./rstsr", default-features = false, version = "0.6.1" }
rstsr-core = { path = "./rstsr-core", default-features = false, version = "0.6.1" }
# members (without core)
rstsr-common = { path = "./rstsr-common", default-features = false, version = "0.6.1" }
rstsr-dtype-traits = { path = "./rstsr-dtype-traits", default-features = false, version = "0.6.1" }
rstsr-native-impl = { path = "./rstsr-native-impl", default-features = false, version = "0.6.1" }
# members (traits and core-extensions)
rstsr-blas-traits = { path = "./rstsr-blas-traits", default-features = false, version = "0.6.1" }
rstsr-linalg-traits = { path = "./rstsr-linalg-traits", default-features = false, version = "0.6.1" }
rstsr-sci-traits = { path = "./rstsr-sci-traits", default-features = false, version = "0.6.1" }
# members (device)
rstsr-openblas = { path = "./crates-device/rstsr-openblas", default-features = false, version = "0.6.1" }
rstsr-mkl = { path = "./crates-device/rstsr-mkl", default-features = false, version = "0.6.1" }
rstsr-blis = { path = "./crates-device/rstsr-blis", default-features = false, version = "0.6.1" }
rstsr-aocl = { path = "./crates-device/rstsr-aocl", default-features = false, version = "0.6.1" }
rstsr-kml = { path = "./crates-device/rstsr-kml", default-features = false, version = "0.6.1" }
# members (plugin)
rstsr-tblis = { path = "./crates-plugin/rstsr-tblis", default-features = false, version = "0.6.1" }
# develop dependencies that should not publish
rstsr-test-manifest = { path = "./rstsr-test-manifest", default-features = false }
# ffi dependencies
rstsr-cblas-base = { version = "0.1" }
rstsr-openblas-ffi = { version = "0.5", default-features = false, features = ["blas", "cblas", "lapack"] }
rstsr-mkl-ffi = { version = "0.2", default-features = false, features = ["blas", "cblas", "lapack"] }
rstsr-blis-ffi = { version = "0.2", default-features = false, features = ["lapack"] }
rstsr-aocl-ffi = { version = "0.2", default-features = false, features = ["blis", "lapack"] }
rstsr-kml-ffi = { version = "0.2", default-features = false, features = ["kblas", "lapack"] }
# basic dependencies
num = { version = "0.4", default-features = false, features = ["alloc", "libm"] }
itertools = { version = "0.13", default-features = false, features = ["use_alloc"] }
half = { version = "2.7", default-features = false, features = ["alloc", "num-traits"] }
libm = { version = "0.2" }
derive_builder = { version = "0.20", default-features = false, features = ["alloc"] }
duplicate = { version = "2.0" }
# optional dependencies
rayon = { version = ">=1.10" }
faer = { version = "0.22", default-features = false, features = ["rayon", "linalg"] }
faer-ext = { version = "0.6" }
tblis = { version = "0.2" }
opt-einsum-path = { version = "0.2", features = ["par_rand"] }
# dev dependencies
npyz = { version = "0.8", features = ["complex"] }
anyhow = { version = "1.0" }
rand = { version = "0.8" }
approx = { version = "0.5" }
ndarray = { version = "0.15" }
criterion = { version = "0.5" }
cpu-time = { version = "1.0" }
tblis-src = { version = "0.2" }

[profile.coverage]
inherits = "dev"
opt-level = 0

[profile.dev]
opt-level = 2

[profile.dev.package.rstsr-openblas-ffi]
opt-level = 0
debug = false

[profile.dev.package.rstsr-mkl-ffi]
opt-level = 0
debug = false

[profile.dev.package.rstsr-blis-ffi]
opt-level = 0
debug = false

[profile.dev.package.rstsr-aocl-ffi]
opt-level = 0
debug = false

[profile.dev.package.rstsr-kml-ffi]
opt-level = 0
debug = false

