[package]
name = "rstsr-aocl"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
rayon = { workspace = true }
num = { workspace = true }
duplicate = { workspace = true }
rstsr-aocl-ffi = { workspace = true }
rstsr-native-impl = { workspace = true, features = ["rayon"] }
rstsr-core = { workspace = true, features = ["rayon"] }
rstsr-common = { workspace = true, features = ["rayon"] }
rstsr-dtype-traits = { workspace = true, features = ["half"] }
rstsr-blas-traits = { workspace = true }
rstsr-linalg-traits = { workspace = true, optional = true }
rstsr-sci-traits = { workspace = true, optional = true }

[dev-dependencies]
rstsr = { path = "../rstsr", default-features = false, features = ["aocl", "linalg"] }
rstsr-test-manifest = { workspace = true }

[features]
default = ["linalg"]
dynamic_loading = ["rstsr-aocl-ffi/dynamic_loading"]
faer = ["rstsr-core/faer"]
ilp64 = ["rstsr-aocl-ffi/ilp64", "rstsr-blas-traits/ilp64"]
linalg = ["dep:rstsr-linalg-traits"]
sci = ["dep:rstsr-sci-traits"]
