[package]
name = "rstsr-blas-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
num = { workspace = true }
half = { workspace = true }
derive_builder = { workspace = true }
rstsr-dtype-traits = { workspace = true }
rstsr-core = { workspace = true, default-features = false, features = ["rayon"] }

[features]
ilp64 = []
