[package]
name = "rstsr-core"
version.workspace = true
edition.workspace = true

[dependencies]
rstsr-dtype-traits = { workspace = true, features = ["half"] }
num = { workspace = true }
itertools = { workspace = true }
half = { workspace = true }
rayon = { workspace = true, optional = true }
faer = { workspace = true, optional = true }
faer-ext = { workspace = true, optional = true }
faer-entity = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
itertools = { workspace = true }
approx = { workspace = true }
ndarray = { workspace = true }
criterion = { workspace = true }
cpu-time = { workspace = true }

[features]
default = ["faer", "faer_as_default"]
std = []
f_prefer = []  # NOTE: THIS FEATURE IS NOT STABLE
rayon = ["dep:rayon"]
faer = ["rayon", "dep:faer", "dep:faer-ext", "dep:faer-entity"]
faer_as_default = []

# Dispatch dimensinoality in layout iterators
# This option is recommended for efficiency for large tensor, especially with non-contiguous strides.
# However, this feature will add runtime overhead for small tensor.
# And more importantly, this feature will hugely increase compile time.
dispatch_dim_layout_iter = []

[[bench]]
name = "main"
harness = false
