[package]
name = "rstsr-dtype-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
num = { workspace = true }
half = { workspace = true, optional = true }

[features]
defaults = ["half"]
half = ["dep:half"]
