[package]
name = "rstsr-dtype-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
libm = { workspace = true }
num = { workspace = true }
half = { workspace = true, optional = true }
duplicate = { workspace = true }

[features]
defaults = ["half"]
half = ["dep:half"]
