[package]
name = "rstsr-linalg-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-core = { workspace = true, default-features = false }
rstsr-blas-traits = { workspace = true, default-features = false, optional = true }
derive_builder = { workspace = true }

[features]
default = ["blas"]
blas = ["dep:rstsr-blas-traits", "rstsr-core/rayon"]
