[package]
name = "rstsr-linalg-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-core = { workspace = true, default-features = false, features = ["rayon"] }
rstsr-common = { workspace = true, default-features = false, features = ["rayon"] }
rstsr-blas-traits = { workspace = true, default-features = false }
duplicate = { workspace = true }
derive_builder = { workspace = true }
