[package]
name = "rstsr-linalg-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-core = { workspace = true, default-features = false, features = ["rayon"] }
rstsr-common = { workspace = true, default-features = false, features = ["rayon"] }
rstsr-blas-traits = { workspace = true, default-features = false }
rstsr-dtype-traits = { workspace = true }
num = { workspace = true }
duplicate = { workspace = true }
derive_builder = { workspace = true }
faer = { workspace = true, optional = true }
faer-ext = { workspace = true, optional = true }

[dev-dependencies]
rstsr = { path = "../rstsr", default-features = false, features = ["linalg"] }
rstsr-test-manifest = { workspace = true }

[features]
faer = ["rstsr-core/faer", "dep:faer", "dep:faer-ext"]
