[package]
name = "rstsr-openblas-ffi"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]

[features]
default = []
ilp64 = []
openmp = []
