[package]
name = "rstsr-openblas"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
rayon = { workspace = true }
num = { workspace = true }
rstsr-core = { workspace = true, features = ["rayon"] }
rstsr-dtype-traits = { workspace = true, features = ["half"] }
rstsr-openblas-ffi = { workspace = true }
rstsr-blas-traits = { workspace = true }
rstsr-linalg-traits = { workspace = true, optional = true }

[dev-dependencies]
rstsr-test-manifest = { workspace = true }

[features]
faer = ["rstsr-core/faer"]
ilp64 = ["rstsr-openblas-ffi/ilp64", "rstsr-blas-traits/ilp64"]
openmp = ["rstsr-openblas-ffi/openmp"]
linalg = ["dep:rstsr-linalg-traits"]
