[package]
name = "rstsr-openblas"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
rayon = { workspace = true }
num = { workspace = true }
duplicate = { workspace = true }
rstsr-openblas-ffi = { workspace = true }
rstsr-lapack-ffi = { workspace = true }
rstsr-core = { workspace = true, features = ["rayon"] }
rstsr-dtype-traits = { workspace = true, features = ["half"] }
rstsr-blas-traits = { workspace = true }
rstsr-linalg-traits = { workspace = true, optional = true }

[dev-dependencies]
rstsr-test-manifest = { workspace = true }

[features]
openmp = []
faer = ["rstsr-core/faer"]
ilp64 = ["rstsr-openblas-ffi/ilp64", "rstsr-lapack-ffi/ilp64", "rstsr-blas-traits/ilp64"]
linalg = ["dep:rstsr-linalg-traits"]
