[package]
name = "rstsr-sci-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-core = { workspace = true }
num = { workspace = true }
rayon = { workspace = true }
