[package]
name = "rstsr"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
rstsr-core = { workspace = true }
rstsr-linalg-traits = { workspace = true, optional = true }
rstsr-sci-traits = { workspace = true, optional = true }
rstsr-openblas = { workspace = true, optional = true }

[features]
default = ["rstsr-core/default", "faer"]

# rstsr-core features
std = ["rstsr-core/std"]
rayon = ["rstsr-core/rayon"]
faer = ["rstsr-core/faer", "rstsr-linalg-traits?/faer", "rstsr-sci-traits?/faer", "rstsr-openblas?/faer"]
faer_as_default = ["rstsr-core/faer_as_default", "faer"]
row_major = ["rstsr-core/row_major"]
col_major = ["rstsr-core/col_major"]
aligned_alloc = ["rstsr-core/aligned_alloc"]
dispatch_dim_layout_iter = ["rstsr-core/dispatch_dim_layout_iter"]

# rstsr-openblas features
openblas = ["dep:rstsr-openblas"]

# dependencies specification
linalg = ["dep:rstsr-linalg-traits", "rstsr-openblas?/linalg"]
sci = ["dep:rstsr-sci-traits", "rstsr-openblas?/sci"]
